Fix image and button alignment in CSS

--- a/Codice/css/style.css
+++ b/Codice/css/style.css
@@ -526,7 +526,7 @@ border:  .7em solid transparent;
 }
 .containerOpere img{
 
-width: 12.5;
+width: 12.5em;
 height: 12.5em;
 object-fit: cover;
 
@@ -1049,7 +1049,7 @@ input[type=submit] {
   display: flex; /*flex to grid */
   flex-wrap: wrap;
   align-items: center;
-  justify-items: space-evenly; 
+  justify-content: space-evenly; 
   margin-left:  1em;
   width: 10em;
   text-align: center;
@@ -1286,7 +1286,7 @@ footer a {
   vertical-align: bottom;
 }
 
-footer a:selected {
+  #selected footer a {
   color: #DDE5FE; 
 }
 
